--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,10 @@
 MONGO_URL="mongodb://localhost:27017"
 DB_NAME="test_database"
 CORS_ORIGINS="*"
+RESEND_API_KEY="re_hcwjF1Ed_JoMgmrr3UDZjLE6LKy5SS8zv"
+SENDER_EMAIL=fitnesstrainingapp2025@gmail.com
+TRAINER_EMAIL=your-email@example.com
+GMAIL_SMTP_USER=fitnesstrainingapp2025@gmail.com
+GMAIL_APP_PASSWORD=exuszgjehbvqnifv
+TRAINER_EMAIL=trainer@email.com
+CORS_ORIGINS=*
